examples/test/testpolicy6036.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6036
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key36: value25
      key39: value31
      key15: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value10
      podSelector:
        matchLabels:
          key37: value40
          key40: value19
